k8s/keycloak/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: default
spec:
  ports:
    - port: 5432
  selector:
    app: keycloak-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
